# smooth_axis

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: sync-arduino.yml
docs/: ALGORITHM.md
include/: smooth_axis.h  smooth_axis_debug.h
ports/arduino/: SmoothAxis.cpp  SmoothAxis.h
ports/arduino/Tools/: package-arduino.sh
ports/arduino/examples/01_HowToUse/Precision/: Precision.ino
ports/arduino/examples/01_HowToUse/Simple/: Simple.ino
src/: smooth_axis.c  smooth_axis.h
tests/: Makefile  README.md  smooth_axis_pipeline.c  smooth_axis_pipeline.h  smooth_axis_presets.h  smooth_axis_scenario.c  smooth_axis_scenario.h  smooth_axis_time_stub.c  step_response_test.c  test_api_sanity.c  test_debug_logging.c  test_main.c
tests/c_tests/: ramp_response_test.c  step_response_test.c  test_api_sanity_enhanced.c
tests/py_scripts/: plot_ramp.py  plot_step.py  requirements.txt
